- Pequeños cambios para no usar estados desactivados. - Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -984,7 +984,7 @@
     "monthly-payment": "Pago mensual",
     "months": "Monate",
     "more": "Mehr",
-    "more-fields": "more-fields",
+    "more-fields": "mehr Felder",
     "more-plugins": "more-plugins",
     "move-lines": "Mover líneas",
     "movements": "Bewegungen",
@@ -1034,7 +1034,7 @@
     "not-public": "Nicht öffentlich",
     "not-stored-content": "Inhalt nicht gespeichert",
     "not-valid-email": "Invalid email %email%",
-    "not-valid-fiscal-number": "not-valid-fiscal-number",
+    "not-valid-fiscal-number": "Ungültige Steuernummer% type% %number%",
     "not-valid-image": "No es una imagen válida",
     "not-valid-percentage-retention": "Not valid percentage retention",
     "note": "Notiz",
@@ -1175,7 +1175,7 @@
     "preferences": "Vorlieben",
     "preview": "Vorschau",
     "previous": "vorherige",
-    "previous-balance": "Previous Balance",
+    "previous-balance": "Vorheriger Saldo",
     "previous-documents": "vorherige Dokumente",
     "previous-quarter": "Trimestre anterior",
     "previously-purchased-from-supplier": "Comprado anteriormente al proveedor",
@@ -1203,7 +1203,7 @@
     "products": "Produkte",
     "profile": "Profil",
     "profit-and-loss": "Gewinn und Verlust",
-    "profit-and-loss-balance": "Profit and loss accounts",
+    "profit-and-loss-balance": "Gewinn- und Verlustrechnung",
     "profits": "Beneficios",
     "project": "Proyekt",
     "projects": "Proyekte",
@@ -1573,7 +1573,7 @@
     "unit-profit": "unit-profit",
     "unit-purchase-price": "Einzelhandelspreis",
     "unit-sale-price": "unit-sale-price",
-    "unlimited": "Ilimitado",
+    "unlimited": "Unbegrenzt",
     "unlink": "Desvincular",
     "unlink-file": "unlink-file",
     "unlink-install-ok": "Instalación borrada del registro correctamente.",
