--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -196,7 +196,7 @@
     "cant-delete-default-company": "Impossibile eliminare l'azienda predefinita",
     "cant-delete-default-country": "Impossibile eliminare il paese predefinito",
     "cant-delete-default-currency": "cant-delete-default-currency",
-    "cant-delete-default-payment-method": "cant-delete-default-payment-method",
+    "cant-delete-default-payment-method": "non è possibile eliminare il metodo di pagamento predefinito",
     "cant-delete-default-serie": "cant-delete-default-serie",
     "cant-delete-default-tax": "Impossibile eliminare la tassa predefinita",
     "cant-delete-default-warehouse": "cant-delete-default-warehouse",
@@ -233,7 +233,7 @@
     "choose-files": "Scegli i file",
     "choose-payment-method": "Choose payment method",
     "choose-serie": "Choose serie",
-    "choose-source": "Choose source",
+    "choose-source": "Scegli la fonte",
     "cifnif": "CIF\/NIF",
     "cities": "Città",
     "city": "Città",
@@ -625,7 +625,7 @@
     "finished": "Completato",
     "finished-cron": "Finished FacturaScripts cron execution, needed time: %timeNeeded%",
     "first-quarter": "Primo trimestre",
-    "first-steps": "first-steps",
+    "first-steps": "primi passi",
     "first-trimester": "Primo trimestre",
     "fiscal-data": "Dati fiscali",
     "fiscal-exercise": "Esercizio fiscale",
@@ -654,7 +654,7 @@
     "friday": "friday",
     "from": "from",
     "from-accounting-entry": "dall'ingresso in contabilità",
-    "from-date": "from-date",
+    "from-date": "a partire da",
     "from-subaccount": "from-subaccount",
     "full-access": "full-access",
     "full-path": "Percorso completo",
@@ -711,7 +711,7 @@
     "group-or-split-p": "Questo assistente consente di generare un nuovo documento dalle righe di altri. Seleziona le quantità che desideri utilizzare, la data del nuovo documento e premi il pulsante generare.",
     "grouping-type": "Agrupación",
     "groups": "gruppi",
-    "has-attachments": "Tiene adjuntos",
+    "has-attachments": "ha allegati",
     "has-parent": "ha-genitore",
     "hash": "Hash",
     "header": "Intestazione",
@@ -756,7 +756,7 @@
     "income-and-expenses": "Ingressi e Uscite",
     "incompatible-document": "incompatible-document",
     "incompatible-with-facturascripts": "Incompatibile con la versione %version% di FacturaScripts",
-    "incorrect-accounting-amount": "Incorrect accounting entry amount.",
+    "incorrect-accounting-amount": "Importo dell'entry contabile non corretto.",
     "info": "Informazioni",
     "infostate-component-title": "Status Information",
     "initial-number": "numero iniziale",
@@ -803,7 +803,7 @@
     "irpf-subaccount-not-found": "irpf-subaccount-not-found",
     "is-admin": "È amministratore",
     "is-creditor": "È creditore",
-    "is-person": "È un individuo (non un'azienda)",
+    "is-person": "È una persona fisica",
     "iso": "ISO",
     "issued": "Issued",
     "item-limit": "Elementi per pagina",
@@ -850,10 +850,10 @@
     "languages-va_ES": "languages-va_ES",
     "last-activity": "L'ultima attività",
     "last-bimester": "last-bimester",
-    "last-block": "last-block",
+    "last-block": "ultimo blocco",
     "last-ip": "Ultimo IP",
     "last-month": "last-month",
-    "last-price-estimation": "Última precio de presupuesto",
+    "last-price-estimation": "Ultima stima del prezzo",
     "last-price-sale": "Último precio de venta",
     "last-purchase-price": "ultimo prezzo d'acquisto",
     "last-quarter": "ultimo-quartiere",
@@ -1026,7 +1026,7 @@
     "non-editable-columns": "Colonna non modificabile: %columns%",
     "non-editable-document": "Documento non modificabile",
     "none": "None",
-    "normal": "normal",
+    "normal": "normale",
     "not-allowed-delete": "not-allowed-delete",
     "not-allowed-modify": "Non si è autorizzati a modificare",
     "not-enough-stock": "not-enough-stock",
@@ -1057,7 +1057,7 @@
     "only-active": "only-active",
     "only-charged": "only-charged",
     "only-closed": "only-closed",
-    "only-insert": "Sólo añadir",
+    "only-insert": "solo inserire",
     "only-owner-data": "only-owner-data",
     "only-pending": "only-pending",
     "only-suspended": "Solo sospesi",
@@ -1077,7 +1077,7 @@
     "order-email-subject": "Oggetto email dell'ordine",
     "order-email-text": "order-email-text",
     "orders": "ordini",
-    "origin": "origin",
+    "origin": "origine",
     "origin-warehouse": "magazzino di origine",
     "original": "Originale",
     "original-file": "File originale",
@@ -1086,7 +1086,7 @@
     "out-of-stock": "out-of-stock",
     "page": "pagina",
     "page-break": "Salto de página",
-    "page-configuration": "Configuration Page",
+    "page-configuration": "Pagina di configurazione",
     "page-not-found": "Pagina non trovata",
     "page-not-found-p": "No hemos encontrado la página que busca.",
     "page-option-info": "Desde aquí puedes modificar los campos visibles en este listado o formulario",
@@ -1099,7 +1099,7 @@
     "parent": "Genitore",
     "parent-account": "Parent Account",
     "parent-family-cant-be-child": "La famiglia madre non può essere la stessa del bambino.",
-    "parent-group": "Parent group",
+    "parent-group": "gruppo genitore",
     "parent-group-cant-be-the-same-group": "Parent group can't be the same group",
     "parent-group-loop": "Parent group %parentGroup% causing circular relation.",
     "partnumber": "Numero di parte",
@@ -1127,9 +1127,9 @@
     "pending-orders-button": "pending-orders-button",
     "pending-reception": "ricezione in sospeso",
     "percentage": "Percentage",
-    "percentage-commission": "% Commission",
+    "percentage-commission": "% Provvigione",
     "percentage-discount": "Sconto percentuale",
-    "percentage-surcharge": "% Surcharge",
+    "percentage-surcharge": "% sovrattassa",
     "percentage-vat": "% IVA",
     "period": "periodo",
     "personalized": "Personalizado",
@@ -1184,7 +1184,7 @@
     "price-with-tax": "price-with-tax",
     "principal": "Principale",
     "print": "Stampare",
-    "print-bank-data": "Imprimir cuenta bancaria",
+    "print-bank-data": "stampa dati bancari",
     "print-data-records": "Stampa tutti i record",
     "print-export-options": "Stampa ed esporta opzioni",
     "print-list-of-records": "Stampa l'elenco dei record",
@@ -1260,7 +1260,7 @@
     "refund-amount": "Cantidad devuelta",
     "refund-payment-concept": "Devolución del recibo %document%",
     "refunds": "refunds",
-    "register": "Registrar",
+    "register": "registrare",
     "register-installation": "Registra installazione",
     "register-installation-p": "register-installation-p",
     "register-symbol": "#",
@@ -1269,7 +1269,7 @@
     "regularization-operation": "Operazione di regolarizzazione",
     "reject": "Rechazar",
     "rejected": "rifiutato",
-    "related": "related",
+    "related": "relazionato",
     "related-subaccount-bank-charges": "Subcuenta relacionada para gastos bancarios (comisiones, etc)",
     "related-subaccount-purchases-sales": "Subcuenta relacionada para compras y ventas",
     "reloading": "reloading",
@@ -1280,7 +1280,7 @@
     "renumber": "Renumerar",
     "renumber-accounting": "Renumber Accounting",
     "renumber-accounting-error": "An error occurred while renumber accounting entries in financial year %exerciseCode%",
-    "renumber-accounting-ok": "Renumbering of accounting entries completed",
+    "renumber-accounting-ok": "Rinumerazione delle voci contabili completata",
     "renumber-accounting-p": "Rinumera le scritture contabili per data, da minore a maggiore",
     "renumber-invoices-p": "Rinumerare le fatture in base alla data, da minore a maggiore",
     "renumber-invoices-success": "Le fatture dell'esercizio '%exercise%' sono state rinumerate correttamente",
@@ -1289,7 +1289,7 @@
     "reply": "risposta",
     "report": "report",
     "report-grouping-account": "Group by account",
-    "report-non-grouping-account": "Non group by account",
+    "report-non-grouping-account": "Non raggruppare per conto",
     "report-taxes-p": "Questo rapporto consente di ottenere la scomposizione delle imposte sulle fatture di acquisto o di vendita del range selezionato",
     "reports": "Rapporti",
     "request-sent": "request-sent",
@@ -1403,18 +1403,18 @@
     "sort-by-ref-desc": "Ordina per riferimento discendente",
     "sorted-asc": "Ordinato ascendente",
     "sorted-desc": "Ordinato discendente",
-    "source": "Fuente",
+    "source": "fonte",
     "source-code": "Source code",
     "special-account": "Conto speciale",
     "special-accounting-entries": "Voci contabili speciali",
-    "special-accounts": "special-accounts",
+    "special-accounts": "conti speciali",
     "specials-actions": "Specials Actions",
     "spreadsheet-xls": "File XLS",
     "standard": "standard",
     "start": "Inicio",
     "start-date": "Data d'inizio",
     "start-hour": "Ora di inizio",
-    "start-time": "start-time",
+    "start-time": "inizio",
     "starting-cron": "A partire FacturaScripts Cron ...",
     "state": "Stato",
     "states": "Stati",
@@ -1424,7 +1424,7 @@
     "status-value-is-number": "Il campo è stato sereno.",
     "stock": "Azione",
     "stock-transfer": "trasferimento di magazzino",
-    "stock-transfers": "stock transfers",
+    "stock-transfers": "trasferimenti di magazzino",
     "stockmax": "Magazzino max",
     "stockmin": "Scorte min.",
     "storage-limit-almost": "Límite de almacenamiento casi alcanzado (%limit%). Quedan %free%",
@@ -1447,7 +1447,7 @@
     "subject": "Oggetto",
     "subtotal": "subtotal",
     "subtract": "Subtract",
-    "success": "success",
+    "success": "successo",
     "sum": "Suma",
     "sum-netos-line-tax-must-be": "La somma della rete delle linee IVA dovrebbe essere: 0",
     "sum-total-line-tax-must-be": "La somma dei totali IVA delle righe IVA dovrebbe essere: 0",
@@ -1578,7 +1578,7 @@
     "unlink-file": "unlink-file",
     "unlink-install-ok": "Disinstallazione cancellata dal registro correttamente.",
     "unlock-entry": "Desbloquear",
-    "unpaid": "unpaid",
+    "unpaid": "non pagato",
     "until-accounting-entry": "Fino alla registrazione contabile",
     "until-date": "until-date",
     "until-subaccount": "until-subaccount",
@@ -1607,7 +1607,7 @@
     "value": "Valore",
     "value-x": "value-x",
     "value-y": "value-y",
-    "values": "values",
+    "values": "valori",
     "variables": "Variables",
     "variant": "Variante",
     "variants": "Varianti",
