--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -11,7 +11,7 @@
     "access-denied-p": "Usted no tiene permiso para ver estos datos. Si cree que si que debería tener permiso para ver estos datos, contacte con su administrador para que le conceda permiso.",
     "account": "Cuenta",
     "account-bad-parent": "La cuenta %codcuenta% tiene asociada una cuenta padre equivocada.",
-    "account-balance": "Saldo de la cuenta",
+    "account-balance": "Saldo konta",
     "account-code": "Código de cuenta",
     "account-code-bigger-than-subaccounts": "El código de la cuenta %code% es más largo que las subcuentas",
     "account-code-lower-than-parent": "Kod konta %code% jest krótszy niż rodzica",
@@ -41,7 +41,7 @@
     "accounting-lines-error": "Error en las líneas del asiento contable",
     "accounting-plan": "Plan contable",
     "accounting-possible-duplicated": "El asiento contable posiblemente está duplicado con este otro. Si no es así, para evitar este mensaje, simplemente cambie el concepto.",
-    "accounting-reports": "Informes contables",
+    "accounting-reports": "Raporty księgowe",
     "accounting-within-regularization": "Ya hay una regularización de impuestos en este periodo. No se pueden hacer cambios.",
     "accounts": "Cuentas",
     "accrual-date": "Fecha devengo",
@@ -122,7 +122,7 @@
     "attribute-value-1": "Atributo 1",
     "attribute-value-2": "Wartość atrybutu 2",
     "attribute-value-3": "Atributo 3",
-    "attribute-value-4": "Atributo 4",
+    "attribute-value-4": "Atrybut 4",
     "attribute-values": "Valores de atributo",
     "attributes": "Atributos",
     "audio": "Audio",
@@ -206,7 +206,7 @@
     "cant-modify-reference": "Imposible modificar la referencia.",
     "cant-remove-accounting-entry": "Nie można usunąć wpisu księgowego",
     "cant-remove-invoice-refund": "Nie można usunąć faktury, która ma już zwrot",
-    "cant-remove-receipt": "No se puede eliminar el recibo",
+    "cant-remove-receipt": "Nie można usunąć rachunku",
     "cant-update-audit-log": "No se puede modificar un registro de auditoria",
     "card": "Tarjeta",
     "carrier": "Transportista",
@@ -267,7 +267,7 @@
     "column": "Columna",
     "columns": "Kolumny",
     "combination-code": "Código de combinación",
-    "combinations": "Combinaciones",
+    "combinations": "Kombinacje",
     "commercial-terms": "Términos comerciales",
     "commission": "Comisión",
     "commission-general-info": "Relación de porcentajes de comisión que se aplican en la venta de productos. Se aplicará el porcentaje con las condiciones más restrictivas o concretas de las informadas.",
@@ -293,7 +293,7 @@
     "confirm-delete": "Czy na pewno chcesz to usunąć?",
     "connect": "Conectar",
     "contact": "Kontakt",
-    "contact-data": "Datos del contacto",
+    "contact-data": "Dane kontaktowe",
     "contact-info": "Informacje kontaktowe",
     "contact-information": "Información de contacto",
     "contact-person": "Persona de contacto",
@@ -391,7 +391,7 @@
     "days-until-expiration": "Dni do wygaśnięcia",
     "db-host": "Host base de datos",
     "db-name": "Nazwa bazy danych",
-    "db-password": "Contraseña base de datos",
+    "db-password": "Hasło do bazy danych",
     "db-port": "Puerto base de datos",
     "db-type": "Typ serwera SQL",
     "db-type-not-recognized": "No se reconoce el tipo de conexión. Debe ser MySQL o PostgreSQL",
@@ -461,7 +461,7 @@
     "discharge-date": "Fecha de alta: %date%",
     "discount": "Descuento",
     "display": "Visualización",
-    "display-date": "F. Mostrar",
+    "display-date": "Data wyświetlania",
     "do-not-disable-plugins": "No desactivar plugins",
     "do-not-group": "No agrupar",
     "do-nothing": "No hacer nada",
@@ -506,7 +506,7 @@
     "email-notification": "Notificación por email",
     "email-notification-disabled": "Powiadomienie e-mail %name% jest wyłączone",
     "email-notification-not-exists": "Notificación de email %name% no encontrada",
-    "email-replies": "Respuesta de emails",
+    "email-replies": "Odpowiedzi e-mail",
     "email-replies-to": "Las respuestas a este email irán a %email%",
     "email-sent": "Email enviado",
     "email-sent-to": "Email enviado a %email%",
@@ -603,7 +603,7 @@
     "field-can-not-be-null": "El campo %fieldName% de la tabla %tableName% no puede ser nulo",
     "field-required": "Pole wymagane: %field%",
     "fields": "Campos",
-    "file": "Archivo",
+    "file": "Plik",
     "file-extension-not-accepted": "Error al enviar el archivo %fileName% porque su extensión no está permitida. Las extensiones permitidas son: %accepted%",
     "file-name": "Nombre de archivo",
     "file-not-exists": "No existe el archivo: %fileName%",
@@ -619,7 +619,7 @@
     "files": "Archivos",
     "filter-method": "Método del filtro",
     "filter-records-containing-indicated-value": "Filtrar registros que contienen el valor",
-    "filters": "Filtros",
+    "filters": "Filtry",
     "finalize": "Finalizar",
     "find-problems": "Encontrar problemas",
     "finished": "Finalizado",
@@ -636,7 +636,7 @@
     "folder-not-writable": "No se puede escribir sobre la carpeta de FacturaScripts.",
     "font": "Fuente",
     "font-size": "Tamaño fuente",
-    "footer": "Pie de página",
+    "footer": "Stopka",
     "footer-text": "Texto pie de página",
     "for-admins": "Para administradores",
     "for-all": "Para todos",
@@ -645,7 +645,7 @@
     "for-sale": "Se vende",
     "foresee": "Prever",
     "format": "Formato",
-    "formula-cost-price": "precio de coste + x% + y",
+    "formula-cost-price": "cena kosztowa + x% + y",
     "formula-sale-price": "precio - x% - y",
     "formula-to-apply": "Fórmula a aplicar",
     "fourth-quarter": "4º trimestre",
@@ -777,7 +777,7 @@
     "invalid-date-there-are-invoices-after": "Fecha no válida: %date%. La factura %other% es posterior y sin embargo tiene fecha anterior: %other-date%. Toda factura debe tener una fecha anterior o igual a la siguiente.",
     "invalid-date-there-are-invoices-before": "Fecha no válida: %date%. La factura %other% es anterior a esta y sin embargo tiene fecha posterior: %other-date%. Toda factura debe tener una fecha anterior o igual a la siguiente.",
     "invalid-iban": "IBAN no válido: %iban%",
-    "invalid-iso-code": "Nieprawidłowy kod ISO ''%iso-code%",
+    "invalid-iso-code": "Nieprawidłowy kod ISO '%iso-code%'",
     "invalid-number": "Número no válido: %number%",
     "invalid-request": "Petición no válida",
     "invalid-user-can-permission": "Permiso no válido: %permission%. Los permisos disponibles son access, delete, export, import, update y only-owner-data.",
@@ -833,7 +833,7 @@
     "languages-es_CO": "Español (Colombia)",
     "languages-es_CR": "Español (Costa Rica)",
     "languages-es_DO": "Español (Rep. Dominicana)",
-    "languages-es_EC": "Español (Ecuador)",
+    "languages-es_EC": "Hiszpański (Ekwador)",
     "languages-es_ES": "Español (España)",
     "languages-es_GT": "Español (Gwatemala)",
     "languages-es_MX": "Español (México)",
@@ -841,7 +841,7 @@
     "languages-es_PE": "Español (Perú)",
     "languages-es_UY": "Español (Uruguay)",
     "languages-eu_ES": "Euskera",
-    "languages-fr_FR": "Francés",
+    "languages-fr_FR": "Francuski",
     "languages-gl_ES": "Gallego",
     "languages-it_IT": "Włoski",
     "languages-pl_PL": "Polaco",
@@ -1058,7 +1058,7 @@
     "only-charged": "Sólo pagados",
     "only-closed": "Solamente cerrados",
     "only-insert": "Sólo añadir",
-    "only-owner-data": "Mostrar solamente registros del usuario",
+    "only-owner-data": "Wyświetl tylko rekordy właściciela",
     "only-pending": "Sólo Pendientes",
     "only-suspended": "Solamente suspendidos",
     "open": "Abrir",
@@ -1130,7 +1130,7 @@
     "percentage-commission": "% Comisión",
     "percentage-discount": "% Rabatu",
     "percentage-surcharge": "% R.E.",
-    "percentage-vat": "% Impuesto",
+    "percentage-vat": "% Podatek",
     "period": "Periodo",
     "personalized": "Personalizado",
     "phase": "Faza",
@@ -1222,7 +1222,7 @@
     "pvpsindto-line-error": "Error en el valor de 'pvpsindto' de la línea %reference% del documento. Valor correcto: %totalWithoutDiscount%",
     "pvptotal-line-error": "Error en el valor de 'pvptotal' de la línea %reference% del documento. Valor correcto: %total%",
     "quantity": "Cantidad",
-    "quantity-abb": "Cant.",
+    "quantity-abb": "Ilość",
     "quantity-remaining": "Cantidad restante",
     "quantity-served": "Cant. servida",
     "quantity-sold": "Cant. vendida",
@@ -1324,13 +1324,13 @@
     "save-filter": "Guardar filtro",
     "sdk": "SDK",
     "search": "Szukaj",
-    "search-document": "Escribe el número de %doctype% para buscar.",
+    "search-document": "Wpisz numer %doctype%, aby wyszukać.",
     "search-product": "Buscar producto",
     "second-hand": "Używane",
     "second-quarter": "2º trimestre",
     "second-trimester": "Drugi trymestr",
     "select": "Seleccionar",
-    "select-all": "Seleccionar todo",
+    "select-all": "Zaznacz wszystko",
     "select-none": "Seleccionar nada",
     "select-plugin-zip-file": "Wybierz wtyczkę (zip):",
     "select-user": "Seleccionar usuario",
@@ -1411,7 +1411,7 @@
     "specials-actions": "Acciones especiales",
     "spreadsheet-xls": "Archivo Excel",
     "standard": "Estándar",
-    "start": "Inicio",
+    "start": "Początek",
     "start-date": "Fecha de inicio",
     "start-hour": "Hora de inicio",
     "start-time": "Czas rozpoczęcia",
@@ -1675,5 +1675,5 @@
     "your": "Suyo",
     "zip-code": "Código Postal",
     "zip-codes": "Kody pocztowe",
-    "zip-error-wrong-structure": "La estructura del zip es incorrecta. Debe contener la carpeta del plugin y solamente un plugin."
+    "zip-error-wrong-structure": "Błędna struktura pliku zip. Musi zawierać folder pluginu i tylko jeden plugin."
 }
