--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -97,7 +97,7 @@
     "apache-module-not-found": "modulo de apache não encontrado",
     "apc-clear": "APC limpo.",
     "apc-delete-key-item": "Elemento excluído '0' da APC.",
-    "apc-get-key-item": "Obter o elemento '0' da APC.",
+    "apc-get-key-item": "Obter o elemento '%item%' da APC.",
     "apc-set-key-item": "Elemento configurado '0' para APC.",
     "api": "API",
     "api-disabled": "API desativada",
@@ -193,7 +193,7 @@
     "cant-create-folder": "Não é possível criar uma pasta.",
     "cant-create-subaccount-supplier": "Não é possível criar a subconta do provedor",
     "cant-delete-audit-log": "No se puede eliminar el registro de auditoría",
-    "cant-delete-default-company": "cant-delete-default-company",
+    "cant-delete-default-company": "Não é possível excluir a empresa padrão",
     "cant-delete-default-country": "Não é possível eliminar o país padrão",
     "cant-delete-default-currency": "Não é possível excluir a moeda padrão",
     "cant-delete-default-payment-method": "cant-delete-default-payment-method",
@@ -201,7 +201,7 @@
     "cant-delete-default-tax": "cant-delete-default-tax",
     "cant-delete-default-warehouse": "cant-delete-default-warehouse",
     "cant-delete-last-user": "No se puede eliminar el último usuario",
-    "cant-delete-variant-with-documents": "No se puede eliminar el producto o variante %reference% porque ya ha sido comprado o vendido. Pero puede bloquearlo si lo desea",
+    "cant-delete-variant-with-documents": "Não é possível excluir o produto ou variante %reference% porque já foi comprado ou vendido. Mas você pode bloqueá-lo se desejar.",
     "cant-load-controller": "Não é possível carregar o controlador '%controllerName%'.",
     "cant-modify-reference": "Não pode editar a referência.",
     "cant-remove-accounting-entry": "No se puede eliminar la entrada contable",
@@ -217,7 +217,7 @@
     "cc": "CC",
     "center": "Center",
     "change": "mudar",
-    "channel": "channel",
+    "channel": "Canal",
     "charge-date": "Data de cobrança",
     "chart": "Chart",
     "charts": "gráficos",
@@ -226,7 +226,7 @@
     "check-vies": "Verificar VIES",
     "checked": "Checado",
     "children": "Criança",
-    "children-accounts": "Children Accounts",
+    "children-accounts": "Contas Filhas",
     "choose-currency": "Escolha a moeda",
     "choose-doc-type": "Escolher o tipo de documento",
     "choose-employee": "Choose employee",
@@ -243,7 +243,7 @@
     "close": "Fechar",
     "close-box": "Fechar caixa",
     "close-exercise": "cerrar-ejercicio",
-    "closed": "Closed",
+    "closed": "Fechado",
     "closed-exercise": "O exercício 0 está fechado.",
     "closed-exercise-cant-change-date": "O exercício %exerciseName% está fechado. Não é possível alterar a data.",
     "closing-accounting-completed": "cierre-contable-completado",
@@ -328,7 +328,7 @@
     "create": "Criar",
     "create-accounting-entry": "Criar lançamento contábil",
     "create-delivery-note": "Crear albarán",
-    "create-estimation": "Crear presupuesto",
+    "create-estimation": "Criar orçamento",
     "create-invoice": "Criar fatura",
     "create-new-record": "Criar novo registro",
     "created": "Criado",
@@ -360,7 +360,7 @@
     "customer-not-found": "Cliente não encontrado",
     "customer-order": "Encomenda de Cliente",
     "customer-orders": "Pedidos de clientes",
-    "customer-payment-concept": "customer-payment-concept",
+    "customer-payment-concept": "Pagamento do recibo %document%",
     "customer-reached-maximum-risk": "O cliente superou o risco m",
     "customer-subaccount-p": "Indique a subconta em uso ou deixe em branco para gerar automaticamente",
     "customers": "clientes",
@@ -475,7 +475,7 @@
     "document-type": "Tipo documento",
     "document-type-valid-length": "Tipo de documento inválido. Deve ter entre 1 e 20 caracteres.",
     "document-wildcard-info": "Documento assinalado na cabeceira do registo contábil",
-    "document-without-total": "Documento %document% sin totales o con el total a 0.",
+    "document-without-total": "Documento %document% sem totais ou com o total a 0.",
     "documentation": "Documentação",
     "documents": "Documentos",
     "documents-generated": "documentos gerados",
@@ -513,7 +513,7 @@
     "email-signature": "email-signature",
     "email-to": "Email To",
     "emails": "E-mails",
-    "emails-sent": "emails-sent",
+    "emails-sent": "E-mails enviados",
     "employee": "Employee",
     "employees": "employees",
     "empty": "Vazio",
@@ -537,7 +537,7 @@
     "error": "ERRO: 0",
     "error-checking-vat-number": "Erro ao verificar o número '%vat-number%' no sistema VIES",
     "error-connecting-memcache": "Erro ao conectar-se ao servidor Memcache.",
-    "error-deleting-lines": "error-deleting-lines",
+    "error-deleting-lines": "Erro ao excluir linhas",
     "error-no-name-in-settings": "Erro ao testar a vista %viewName%. Nenhuma coluna 'name' no xml",
     "error-on-xml-file": "Error on XML file %fileName%",
     "error-processing-xmlview": "Erro ao processar a exibição XML, o arquivo '0' não existe ou está incorreto",
@@ -636,7 +636,7 @@
     "folder-not-writable": "Você não pode escrever na pasta FacturaScripts.",
     "font": "Fonte",
     "font-size": "Tamanho de fonte",
-    "footer": "Pié de página",
+    "footer": "Rodapé",
     "footer-text": "Texto do rodapé",
     "for-admins": "P",
     "for-all": "Para todos",
@@ -674,7 +674,7 @@
     "generated-accounting-entries": "0 entradas contábeis geradas.",
     "generated-accounts": "0 contas geradas.",
     "generated-agents": "0 agentes gerados.",
-    "generated-at": "Generated at %when%",
+    "generated-at": "Gerado em %when%",
     "generated-contacts": "%quantity% contatos gerados.",
     "generated-customer-delivery-notes": "0 notas de entrega de clientes geradas.",
     "generated-customer-estimations": "0 estimativas de clientes geradas.",
@@ -717,7 +717,7 @@
     "header": "Cabeçalho",
     "heading-account-group-id": "Cabeçalho do grupo de identificação da conta",
     "heading-account-id-root": "Cabeçalho da raiz da conta",
-    "health": "health",
+    "health": "Saúde",
     "height": "Altura",
     "hello": "Olá",
     "help": "Socorro",
@@ -797,7 +797,7 @@
     "invoices": "Faturas",
     "invoices-cant-generate-new-docs": "As faturas não podem gerar novos documentos",
     "ip": "IP",
-    "ip-banned": "ip-banned",
+    "ip-banned": "Acesso bloqueado temporariamente a partir do seu IP por motivos de segurança.",
     "irpf": "IRPF",
     "irpf-record-not-found": "Registro de IRPF %value%% não encontrado.",
     "irpf-subaccount-not-found": "irpf-subaccount-not-found",
@@ -810,15 +810,15 @@
     "items-added-correctly": "items-added-correctly",
     "items-removed-correctly": "%num% items eliminados corretamente",
     "ivarep-subaccount-not-found": "ivarep-subaccount-not-found",
-    "ivasop-account-not-found": "ivasop-account-not-found",
+    "ivasop-account-not-found": "Conta de IVA não encontrada",
     "january": "Janeiro",
     "job-name": "Nome do Trabalho",
-    "journal": "Journal",
+    "journal": "Diário",
     "journal-closing": "Fecho de jornal",
     "journal-opening": "journal-opening",
     "journals": "Journals",
     "july": "Julho",
-    "june": "Junio",
+    "june": "Junho",
     "justified": "justified",
     "key-google-maps": "Chave do Google Maps",
     "keys": "Chaves",
@@ -871,7 +871,7 @@
     "level-benefit-sales": "Nivel para ver beneficios",
     "level-cost-sales": "Nível para visualizar custos",
     "level1": "Level 1",
-    "level2": "Level 2",
+    "level2": "Nível 2",
     "level3": "Nível 3",
     "level4": "Level 4",
     "liabilities": "Liabilities",
@@ -1137,7 +1137,7 @@
     "phone": "telefone",
     "phone2": "Telefone 2",
     "phones": "Telefones",
-    "php-extension-needed": "Se requiere la extensión %extension% en la configuración de PHP",
+    "php-extension-needed": "É necessária a extensão %extension% na configuração do PHP",
     "php-extension-not-found": "You don't have the %extension% PHP extension installed.",
     "php-support-end": "p",
     "physical-stock": "Estoque físico",
@@ -1148,7 +1148,7 @@
     "plugin-deleted": "O plugin 0 foi excluído com sucesso.",
     "plugin-disabled": "Plugin desativado com sucesso.",
     "plugin-enabled": "Plugin ativado com sucesso.",
-    "plugin-file-too-big": "Este servidor no permite subir archivos de más de %size% MB. Por favor, aumenta el tamaño máximo de subida de archivos en PHP o copia el archivo a la carpeta Plugins.",
+    "plugin-file-too-big": "Este servidor não permite fazer upload de arquivos com mais de %size% MB. Por favor, aumente o tamanho máximo de upload de arquivos no PHP ou copie o arquivo para a pasta Plugins.",
     "plugin-installation-disabled": "plugin-installation-disabled",
     "plugin-installed": "Plugin instalado",
     "plugin-need-update": "El plugin %plugin% necesitará actualización para funcionar con la nueva versión de FacturaScripts.",
@@ -1207,7 +1207,7 @@
     "profits": "Lucros",
     "project": "Projeto",
     "projects": "Projetos",
-    "provider-reference": "Referência do provedor",
+    "provider-reference": "Referência do fornecedor",
     "province": "Província",
     "provinces": "províncias",
     "public": "Público",
@@ -1238,16 +1238,16 @@
     "rebuild": "Reconstruir",
     "rebuild-completed": "rebuild-completed",
     "rebuild-stock": "reconstruir-estoque",
-    "receipt": "receipt",
+    "receipt": "recibo",
     "receipt-expense-account": "receipt-expense-account",
-    "receipts": "receipts",
+    "receipts": "Recibos",
     "record-deleted-correctly": "Registro excluído corretamente!",
     "record-deleted-error": "Erro ao excluir o registro",
     "record-not-found": "record-not-found",
     "record-save-error": "An error occurred while saving the record",
     "record-updated-correctly": "Registro atualizado corretamente!",
     "recreate-system-integrity": "Recriar integridade do sistema",
-    "rectified-invoice": "rectified-invoice",
+    "rectified-invoice": "fatura retificada",
     "rectified-invoice-p": "Las facturas son documentos mercantiles y tiene una serie de restricciones legales. No se pueden eliminar ni modificar. Solamente se permiten devoluciones totales o parciales. Utiliza este formulario para hacer una devolución sobre esta factura.",
     "rectified-invoices": "Facturas rectificativas",
     "rectifying": "Retificativa",
@@ -1270,8 +1270,8 @@
     "reject": "Rejeitar",
     "rejected": "rejeitado",
     "related": "related",
-    "related-subaccount-bank-charges": "Subcuenta relacionada para gastos bancarios (comisiones, etc)",
-    "related-subaccount-purchases-sales": "Subcuenta relacionada para compras y ventas",
+    "related-subaccount-bank-charges": "Subconta relacionada para despesas bancárias (comissões, etc)",
+    "related-subaccount-purchases-sales": "Subconta relacionada para compras e vendas",
     "reloading": "reloading",
     "remove-filter": "Eliminar filtros",
     "remove-from-list": "remove-from-list",
@@ -1367,7 +1367,7 @@
     "services": "Serviços",
     "settings": "Configurações",
     "settlement": "settlement",
-    "settlement-product": "settlement-product",
+    "settlement-product": "Produto de liquidação",
     "settlements": "settlements",
     "setup-options": "Opções de configuração",
     "shipping": "Shipping",
@@ -1395,7 +1395,7 @@
     "smaller-than": "Menor que",
     "soap-extension-not-installed": "A extensão SOAP não está instalada em PHP. Entre em contato com seu provedor de hospedagem para ativá-la.",
     "social-security-number": "Social Security number",
-    "sort": "Order",
+    "sort": "Ordenar",
     "sort-by-column": "Ordenar por columna",
     "sort-by-date-asc": "Ordenar por data crescente",
     "sort-by-date-desc": "Ordenar por data desc.",
@@ -1433,7 +1433,7 @@
     "structured-data-csv": "Arquivo CSV",
     "sub-account": "Sub conta",
     "sub-type": "sub-type",
-    "subaccount": "Subcontas",
+    "subaccount": "Subconta",
     "subaccount-bad-codcuenta": "A",
     "subaccount-belongs-other-year": "A sub-conta 0 pertence a outro exercício.",
     "subaccount-irpf": "Conta para deduções",
@@ -1477,7 +1477,7 @@
     "suppliers": "Fornecedores",
     "support": "Soporte",
     "supported-tax-re-subaccount": "Subconta de imposto de suporte",
-    "supported-tax-subaccount": "supported-tax-subaccount",
+    "supported-tax-subaccount": "Subconta de imposto suportada",
     "surcharge": "Sobretaxa",
     "surname": "Sobrenome",
     "suspended": "Suspenso",
@@ -1507,7 +1507,7 @@
     "template-error": "template-error",
     "template-not-found": "Modelo não encontrado",
     "templates": "Plantillas",
-    "test": "Test",
+    "test": "Teste",
     "test-mail-not-implemented": "O teste do controlador de e-mail Mail não está implementado",
     "test-sendmail-not-implemented": "O teste do controlador de correio sendmail não está implementado",
     "text-color": "Cor do texto",
@@ -1612,7 +1612,7 @@
     "variant": "Variant",
     "variants": "Variantes",
     "vat": "CUBA",
-    "vat-document": "VAT Document",
+    "vat-document": "Documento de IVA",
     "vat-exception": "Excepción de IVA",
     "vat-number-is-short": "O número '%vat-number%' é muito curto",
     "vat-number-not-vies": "O número '%vat-number%' não está registrado no sistema VIES",
