--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -193,7 +193,7 @@
     "cant-create-folder": "Não é possível criar uma pasta.",
     "cant-create-subaccount-supplier": "Não é possível criar a subconta do provedor",
     "cant-delete-audit-log": "Não é possível eliminar o registro de auditoria",
-    "cant-delete-default-company": "cant-delete-default-company",
+    "cant-delete-default-company": "Não é possível excluir a empresa padrão",
     "cant-delete-default-country": "Não é possível eliminar o país padrão",
     "cant-delete-default-currency": "cant-delete-default-currency",
     "cant-delete-default-payment-method": "cant-delete-default-payment-method",
@@ -226,7 +226,7 @@
     "check-vies": "Verificar VIES",
     "checked": "Checado",
     "children": "Criança",
-    "children-accounts": "Children Accounts",
+    "children-accounts": "Contas Filhas",
     "choose-currency": "Choose currency",
     "choose-doc-type": "Escolher tipo de documento",
     "choose-employee": "Choose employee",
@@ -243,7 +243,7 @@
     "close": "Fechar",
     "close-box": "Fechar caixa",
     "close-exercise": "terminar exercício",
-    "closed": "Closed",
+    "closed": "Fechado",
     "closed-exercise": "O exercício 0 está fechado.",
     "closed-exercise-cant-change-date": "O exercício 0 está fechado. Você não pode mudar a data.",
     "closing-accounting-completed": "fecho-contabilidade-concluída",
@@ -282,7 +282,7 @@
     "company-name": "Nome da empresa",
     "company-warehouse": "Empresa\/Armazém",
     "comparative": "Comparativo",
-    "compared": "compared",
+    "compared": "Comparado",
     "compatible": "Compatible",
     "completed": "Completado",
     "component": "Component",
@@ -360,7 +360,7 @@
     "customer-not-found": "Cliente não encontrado",
     "customer-order": "Encomenda de Cliente",
     "customer-orders": "Pedidos de clientes",
-    "customer-payment-concept": "customer-payment-concept",
+    "customer-payment-concept": "Pagamento do recibo %document%",
     "customer-reached-maximum-risk": "O cliente superou o risco máximo",
     "customer-subaccount-p": "Indique a subconta em uso ou deixe em branco para gerar automaticamente",
     "customers": "clientes",
@@ -475,7 +475,7 @@
     "document-type": "Tipo documento",
     "document-type-valid-length": "Tipo de documento inválido. Deve ter entre 1 e 20 caracteres.",
     "document-wildcard-info": "Documento assinalado na cabeceira do registo contábil",
-    "document-without-total": "Documento %document% sin totales o con el total a 0.",
+    "document-without-total": "Documento %document% sem totais ou com o total a 0.",
     "documentation": "Documentação",
     "documents": "Documentos",
     "documents-generated": "documentos gerados",
@@ -674,7 +674,7 @@
     "generated-accounting-entries": "0 entradas contábeis geradas.",
     "generated-accounts": "0 contas geradas.",
     "generated-agents": "0 agentes gerados.",
-    "generated-at": "Generated at %when%",
+    "generated-at": "Gerado em %when%",
     "generated-contacts": "%quantity% contatos gerados.",
     "generated-customer-delivery-notes": "0 notas de entrega de clientes geradas.",
     "generated-customer-estimations": "0 estimativas de clientes geradas.",
@@ -735,7 +735,7 @@
     "hours": "hours",
     "http": "HTTP",
     "https": "HTTPS",
-    "i-forgot-password": "i-forgot-password",
+    "i-forgot-password": "Esqueci minha senha",
     "iban": "IBAN",
     "icon": "ícone",
     "id": "Identidade.",
@@ -797,7 +797,7 @@
     "invoices": "Faturas",
     "invoices-cant-generate-new-docs": "As faturas não podem gerar novos documentos",
     "ip": "IP",
-    "ip-banned": "ip-banned",
+    "ip-banned": "Acesso bloqueado temporariamente a partir do seu IP por motivos de segurança.",
     "irpf": "IRPF",
     "irpf-record-not-found": "Registro de IRPF %value%% no encontrado.",
     "irpf-subaccount-not-found": "irpf-subaccount-not-found",
@@ -813,12 +813,12 @@
     "ivasop-account-not-found": "ivasop-account-not-found",
     "january": "Enero",
     "job-name": "Nome do Trabalho",
-    "journal": "Journal",
+    "journal": "Diário",
     "journal-closing": "Fecho de jornal",
     "journal-opening": "journal-opening",
     "journals": "Journals",
     "july": "Julho",
-    "june": "Junio",
+    "june": "Junho",
     "justified": "justified",
     "key-google-maps": "Clave de Google Maps",
     "keys": "keys",
@@ -1023,7 +1023,7 @@
     "no-selected-item": "no-selected-item",
     "no-stock": "Sem estoque",
     "non-editable-accounting-entry": "non-editable-accounting-entry",
-    "non-editable-columns": "non-editable-columns",
+    "non-editable-columns": "Colunas não editáveis: %columns%",
     "non-editable-document": "Non editable document",
     "none": "Nenhum",
     "normal": "normal",
@@ -1095,7 +1095,7 @@
     "pages": "Páginas",
     "paid": "Pagado",
     "paid-or-unpaid": "Pagado o impagado",
-    "paid-receipts-prevent-action": "paid-receipts-prevent-action",
+    "paid-receipts-prevent-action": "Não é possível executar esta ação com recibos pagos",
     "parent": "Pai",
     "parent-account": "Conta Pai",
     "parent-family-cant-be-child": "A família mãe não pode ser a mesma que a criança.",
@@ -1137,7 +1137,7 @@
     "phone": "telefone",
     "phone2": "Telefone 2",
     "phones": "Telefones",
-    "php-extension-needed": "Se requiere la extensión %extension% en la configuración de PHP",
+    "php-extension-needed": "É necessária a extensão %extension% na configuração do PHP",
     "php-extension-not-found": "You don't have the %extension% PHP extension installed.",
     "php-support-end": "p",
     "physical-stock": "Estoque físico",
@@ -1148,7 +1148,7 @@
     "plugin-deleted": "O plugin 0 foi excluído com sucesso.",
     "plugin-disabled": "Plugin desativado com sucesso.",
     "plugin-enabled": "Plugin ativado com sucesso.",
-    "plugin-file-too-big": "Este servidor no permite subir archivos de más de %size% MB. Por favor, aumenta el tamaño máximo de subida de archivos en PHP o copia el archivo a la carpeta Plugins.",
+    "plugin-file-too-big": "Este servidor não permite fazer upload de arquivos com mais de %size% MB. Por favor, aumente o tamanho máximo de upload de arquivos no PHP ou copie o arquivo para a pasta Plugins.",
     "plugin-installation-disabled": "plugin-installation-disabled",
     "plugin-installed": "Plugin instalado",
     "plugin-need-update": "El plugin %plugin% necesitará actualización para funcionar con la nueva versión de FacturaScripts.",
@@ -1270,8 +1270,8 @@
     "reject": "Rechazar",
     "rejected": "rejeitado",
     "related": "related",
-    "related-subaccount-bank-charges": "Subcuenta relacionada para gastos bancarios (comisiones, etc)",
-    "related-subaccount-purchases-sales": "Subcuenta relacionada para compras y ventas",
+    "related-subaccount-bank-charges": "Subconta relacionada para despesas bancárias (comissões, etc)",
+    "related-subaccount-purchases-sales": "Subconta relacionada para compras e vendas",
     "reloading": "reloading",
     "remove-filter": "Eliminar filtros",
     "remove-from-list": "remove-from-list",
@@ -1395,7 +1395,7 @@
     "smaller-than": "Menor que",
     "soap-extension-not-installed": "A extensão SOAP não está instalada em PHP. Entre em contato com seu provedor de hospedagem para ativá-la.",
     "social-security-number": "Social Security number",
-    "sort": "Order",
+    "sort": "Ordenar",
     "sort-by-column": "Ordenar por columna",
     "sort-by-date-asc": "Ordenar por fecha desc.",
     "sort-by-date-desc": "Ordenar por fecha desc.",
@@ -1477,7 +1477,7 @@
     "suppliers": "Fornecedores",
     "support": "Soporte",
     "supported-tax-re-subaccount": "Subcuenta recargo soportado",
-    "supported-tax-subaccount": "supported-tax-subaccount",
+    "supported-tax-subaccount": "Subconta de imposto suportada",
     "surcharge": "Sobretaxa",
     "surname": "Sobrenome",
     "suspended": "Suspenso",
