--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -594,7 +594,7 @@
     "export": "Exportar",
     "export-bill": "Factura d'exportació",
     "extra-file": "Archiu extra",
-    "failed": "Fallido",
+    "failed": "Fallit",
     "families": "Famílies",
     "family": "Familia",
     "family-code": "Còdic de la família",
@@ -623,7 +623,7 @@
     "finalize": "Acabar",
     "find-problems": "Trobar problemes",
     "finished": "Finalizado",
-    "finished-cron": "L'eixecució del cron FacturaScripts ja ha acabat. El temps necessari ha segut de: %timeNeeded%",
+    "finished-cron": "L'execució del cron FacturaScripts ja ha acabat. El temps necessari ha sigut de: %timeNeeded%",
     "first-quarter": "Primer trimestre",
     "first-steps": "Primers passos",
     "first-trimester": "Primer trimestre",
@@ -712,7 +712,7 @@
     "grouping-type": "Agrupación",
     "groups": "Grups",
     "has-attachments": "Té adjunts",
-    "has-parent": "has-parent",
+    "has-parent": "Té pare",
     "hash": "Hash",
     "header": "Capçalera",
     "heading-account-group-id": "ID del grup",
@@ -952,7 +952,7 @@
     "method-payment": "Forma de pagament",
     "mime-type": "Mime Type",
     "minimum-amount-with-cifnif": "Mínimo importe con CIF\/NIF",
-    "minimum-amount-without-cifnif": "Mínimo importe sin CIF\/NIF",
+    "minimum-amount-without-cifnif": "Mínim import sense CIF\/NIF",
     "minimum-stock": "Estoc mínim",
     "minutes": "Minutes",
     "mismatched-accounting-entry": "mismatched-accounting-entry",
@@ -1508,7 +1508,7 @@
     "template-not-found": "No s'ha trobat la plantilla",
     "templates": "Plantilles",
     "test": "Prova",
-    "test-mail-not-implemented": "El test del controlador de correo Mail no está implementado",
+    "test-mail-not-implemented": "El test del controlador de correo Mail no està implementat",
     "test-sendmail-not-implemented": "La prova del controlador de correu sendmail no està implementada",
     "text-color": "Color de texto",
     "texts": "textos",
@@ -1566,7 +1566,7 @@
     "type-success": "type-success",
     "type-warning": "Tipo advertència",
     "unbalance": "Desquadre",
-    "unbalanced-entry": "Asiento descuadrado",
+    "unbalanced-entry": "Asentament desequilibrat",
     "unchecked": "Sense comprovar",
     "under-minimums": "under-minimums",
     "undo": "Desfés",
